# examples

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: jest.yml  pytest.yml  ruby.yml  vitest.yml
jest-example/: README.md  jest.config.js  package.json  tsconfig.json
jest-example/tests/: calculator.test.ts
pytest-example/: .gitignore  README.md  pyproject.toml
pytest-example/src/: calculator.py
pytest-example/tests/: test_calculator.py
ruby-example/: .gitignore
ruby-example/lib/: calculator.rb
ruby-example/spec/: calculator_spec.rb
vitest-example/: README.md  package.json  tsconfig.json
vitest-example/tests/: calculator.test.ts
